crates/es-fluent-derive/src/macros/derive_es_fluent_variants/snapshots/process_enum_emits_variants_label_registration.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_variants/mod.rs
expression: tokens
---
///Variants of [`Status`].
#[derive(Clone, Copy, Debug, Eq, Hash, PartialEq)]
pub enum StatusVariants {
    ///The `Ready` variant of [`Status`].
    Ready,
    ///The `Failed` variant of [`Status`].
    Failed,
}
impl ::es_fluent::FluentMessage for StatusVariants {
    fn to_fluent_string_with(
        &self,
        localize: &mut ::es_fluent::FluentMessageLookup<'_>,
    ) -> String {
        match self {
            Self::Ready => {
                localize(
                    {
                        ::es_fluent::registry::__macro::static_message_key(
                            env!("CARGO_PKG_NAME"),
                            ::es_fluent::registry::StaticFluentDomain::from_package_name(
                                env!("CARGO_PKG_NAME"),
                            ),
                            ::es_fluent::registry::__macro::static_entry_id(
                                "status_variants-Ready",
                            ),
                        )
                    },
                    None,
                )
            }
            Self::Failed => {
                localize(
                    {
                        ::es_fluent::registry::__macro::static_message_key(
                            env!("CARGO_PKG_NAME"),
                            ::es_fluent::registry::StaticFluentDomain::from_package_name(
                                env!("CARGO_PKG_NAME"),
                            ),
                            ::es_fluent::registry::__macro::static_entry_id(
                                "status_variants-Failed",
                            ),
                        )
                    },
                    None,
                )
            }
        }
    }
}
impl ::es_fluent::EsFluentChoice for StatusVariants {
    fn as_fluent_choice(&self) -> ::es_fluent::registry::StaticFluentVariantKey {
        match self {
            Self::Ready => ::es_fluent::registry::__macro::static_variant_key("ready"),
            Self::Failed => ::es_fluent::registry::__macro::static_variant_key("failed"),
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_inventory_StatusVariants {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::__macro::ftl_variant(
            "Ready",
            ::es_fluent::registry::__macro::static_entry_id("status_variants-Ready"),
            &[],
            module_path!(),
            line!(),
        ),
        ::es_fluent::registry::__macro::ftl_variant(
            "Failed",
            ::es_fluent::registry::__macro::static_entry_id("status_variants-Failed"),
            &[],
            module_path!(),
            line!(),
        ),
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Enum,
        "StatusVariants",
        VARIANTS,
        ::es_fluent::registry::__macro::ftl_scope(env!("CARGO_PKG_NAME"), None),
        file!(),
        module_path!(),
        Some(::es_fluent::registry::__macro::namespace_literal("ui")),
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_label_inventory_StatusVariants {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::__macro::ftl_variant(
            "StatusVariants",
            ::es_fluent::registry::__macro::static_entry_id("status_variants_label"),
            &[],
            module_path!(),
            line!(),
        ),
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Enum,
        "StatusVariants",
        VARIANTS,
        ::es_fluent::registry::__macro::ftl_scope(env!("CARGO_PKG_NAME"), None),
        file!(),
        module_path!(),
        Some(::es_fluent::registry::__macro::namespace_literal("ui")),
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
impl ::es_fluent::FluentLabel for StatusVariants {
    fn fluent_label_key() -> ::es_fluent::registry::StaticFluentMessageKey {
        {
            ::es_fluent::registry::__macro::static_message_key(
                env!("CARGO_PKG_NAME"),
                ::es_fluent::registry::StaticFluentDomain::from_package_name(
                    env!("CARGO_PKG_NAME"),
                ),
                ::es_fluent::registry::__macro::static_entry_id("status_variants_label"),
            )
        }
    }
}
