crates/es-fluent-derive/src/macros/derive_es_fluent_variants/snapshots/process_struct_emits_keyed_generated_enums.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_variants/mod.rs
expression: tokens
---
///`label` variants of [`LoginForm`].
#[derive(Clone, Copy, Debug, Eq, Hash, PartialEq)]
pub enum LoginFormLabelVariants {
    ///The `username` `label` variant of [`LoginForm`].
    Username,
    ///The `password` `label` variant of [`LoginForm`].
    Password,
}
impl ::es_fluent::FluentMessage for LoginFormLabelVariants {
    fn to_fluent_string_with(
        &self,
        localize: &mut ::es_fluent::FluentMessageLookup<'_>,
    ) -> String {
        match self {
            Self::Username => {
                localize(
                    {
                        ::es_fluent::registry::__macro::static_message_key(
                            env!("CARGO_PKG_NAME"),
                            ::es_fluent::registry::StaticFluentDomain::from_package_name(
                                env!("CARGO_PKG_NAME"),
                            ),
                            ::es_fluent::registry::__macro::static_entry_id(
                                "login_form_label_variants-username",
                            ),
                        )
                    },
                    None,
                )
            }
            Self::Password => {
                localize(
                    {
                        ::es_fluent::registry::__macro::static_message_key(
                            env!("CARGO_PKG_NAME"),
                            ::es_fluent::registry::StaticFluentDomain::from_package_name(
                                env!("CARGO_PKG_NAME"),
                            ),
                            ::es_fluent::registry::__macro::static_entry_id(
                                "login_form_label_variants-password",
                            ),
                        )
                    },
                    None,
                )
            }
        }
    }
}
impl ::es_fluent::EsFluentChoice for LoginFormLabelVariants {
    fn as_fluent_choice(&self) -> ::es_fluent::registry::StaticFluentVariantKey {
        match self {
            Self::Username => {
                ::es_fluent::registry::__macro::static_variant_key("username")
            }
            Self::Password => {
                ::es_fluent::registry::__macro::static_variant_key("password")
            }
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_inventory_LoginFormLabelVariants {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::__macro::ftl_variant(
            "Username",
            ::es_fluent::registry::__macro::static_entry_id(
                "login_form_label_variants-username",
            ),
            &[],
            module_path!(),
            line!(),
        ),
        ::es_fluent::registry::__macro::ftl_variant(
            "Password",
            ::es_fluent::registry::__macro::static_entry_id(
                "login_form_label_variants-password",
            ),
            &[],
            module_path!(),
            line!(),
        ),
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Enum,
        "LoginFormLabelVariants",
        VARIANTS,
        ::es_fluent::registry::__macro::ftl_scope(env!("CARGO_PKG_NAME"), None),
        file!(),
        module_path!(),
        Some(::es_fluent::registry::__macro::namespace_literal("ui")),
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_label_inventory_LoginFormLabelVariants {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::__macro::ftl_variant(
            "LoginFormLabelVariants",
            ::es_fluent::registry::__macro::static_entry_id(
                "login_form_label_variants_label",
            ),
            &[],
            module_path!(),
            line!(),
        ),
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Enum,
        "LoginFormLabelVariants",
        VARIANTS,
        ::es_fluent::registry::__macro::ftl_scope(env!("CARGO_PKG_NAME"), None),
        file!(),
        module_path!(),
        Some(::es_fluent::registry::__macro::namespace_literal("ui")),
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
impl ::es_fluent::FluentLabel for LoginFormLabelVariants {
    fn fluent_label_key() -> ::es_fluent::registry::StaticFluentMessageKey {
        {
            ::es_fluent::registry::__macro::static_message_key(
                env!("CARGO_PKG_NAME"),
                ::es_fluent::registry::StaticFluentDomain::from_package_name(
                    env!("CARGO_PKG_NAME"),
                ),
                ::es_fluent::registry::__macro::static_entry_id(
                    "login_form_label_variants_label",
                ),
            )
        }
    }
}
///`placeholder` variants of [`LoginForm`].
#[derive(Clone, Copy, Debug, Eq, Hash, PartialEq)]
pub enum LoginFormPlaceholderVariants {
    ///The `username` `placeholder` variant of [`LoginForm`].
    Username,
    ///The `password` `placeholder` variant of [`LoginForm`].
    Password,
}
impl ::es_fluent::FluentMessage for LoginFormPlaceholderVariants {
    fn to_fluent_string_with(
        &self,
        localize: &mut ::es_fluent::FluentMessageLookup<'_>,
    ) -> String {
        match self {
            Self::Username => {
                localize(
                    {
                        ::es_fluent::registry::__macro::static_message_key(
                            env!("CARGO_PKG_NAME"),
                            ::es_fluent::registry::StaticFluentDomain::from_package_name(
                                env!("CARGO_PKG_NAME"),
                            ),
                            ::es_fluent::registry::__macro::static_entry_id(
                                "login_form_placeholder_variants-username",
                            ),
                        )
                    },
                    None,
                )
            }
            Self::Password => {
                localize(
                    {
                        ::es_fluent::registry::__macro::static_message_key(
                            env!("CARGO_PKG_NAME"),
                            ::es_fluent::registry::StaticFluentDomain::from_package_name(
                                env!("CARGO_PKG_NAME"),
                            ),
                            ::es_fluent::registry::__macro::static_entry_id(
                                "login_form_placeholder_variants-password",
                            ),
                        )
                    },
                    None,
                )
            }
        }
    }
}
impl ::es_fluent::EsFluentChoice for LoginFormPlaceholderVariants {
    fn as_fluent_choice(&self) -> ::es_fluent::registry::StaticFluentVariantKey {
        match self {
            Self::Username => {
                ::es_fluent::registry::__macro::static_variant_key("username")
            }
            Self::Password => {
                ::es_fluent::registry::__macro::static_variant_key("password")
            }
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_inventory_LoginFormPlaceholderVariants {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::__macro::ftl_variant(
            "Username",
            ::es_fluent::registry::__macro::static_entry_id(
                "login_form_placeholder_variants-username",
            ),
            &[],
            module_path!(),
            line!(),
        ),
        ::es_fluent::registry::__macro::ftl_variant(
            "Password",
            ::es_fluent::registry::__macro::static_entry_id(
                "login_form_placeholder_variants-password",
            ),
            &[],
            module_path!(),
            line!(),
        ),
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Enum,
        "LoginFormPlaceholderVariants",
        VARIANTS,
        ::es_fluent::registry::__macro::ftl_scope(env!("CARGO_PKG_NAME"), None),
        file!(),
        module_path!(),
        Some(::es_fluent::registry::__macro::namespace_literal("ui")),
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_label_inventory_LoginFormPlaceholderVariants {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::__macro::ftl_variant(
            "LoginFormPlaceholderVariants",
            ::es_fluent::registry::__macro::static_entry_id(
                "login_form_placeholder_variants_label",
            ),
            &[],
            module_path!(),
            line!(),
        ),
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Enum,
        "LoginFormPlaceholderVariants",
        VARIANTS,
        ::es_fluent::registry::__macro::ftl_scope(env!("CARGO_PKG_NAME"), None),
        file!(),
        module_path!(),
        Some(::es_fluent::registry::__macro::namespace_literal("ui")),
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
impl ::es_fluent::FluentLabel for LoginFormPlaceholderVariants {
    fn fluent_label_key() -> ::es_fluent::registry::StaticFluentMessageKey {
        {
            ::es_fluent::registry::__macro::static_message_key(
                env!("CARGO_PKG_NAME"),
                ::es_fluent::registry::StaticFluentDomain::from_package_name(
                    env!("CARGO_PKG_NAME"),
                ),
                ::es_fluent::registry::__macro::static_entry_id(
                    "login_form_placeholder_variants_label",
                ),
            )
        }
    }
}
